--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-brand{
+  text-align: center;
+}
+.card{
+  width: 450px;
+  height: 600px;
+  display:inline-grid;
+  margin: 20px;
+  border-radius: 5px;
+}
+
+.card-img-top{
+  width: 400px;
+  height: 20rem;
+  padding: 0;
+}
+
+.card-text-price{
+  color:black;
+  font-weight: bold;
+}
